2007-11-15  Ingmar Schlecht  <ingmar@typo3.org>

	* Bugfix #5683: processing of label field in backend (Thanks to Ralf Hettinger)
	* Set left-padding of options in selectorboxes to 22 if an icon is displayed that has a width between 14 and 20 pixels. This was necessary for a good visual impression even if page and content type icon sizes vary.

2007-11-15  Thomas Hempel <thomas@typo3-unleashed.net>

	* added new installer (ALPHA) code in typo3/sysext/install
	* moved typo3/sysext/install to typo3/sysext/install_old
	* added side-by-side patch to prepare core for new installer code (makes it possible to run old and new installer side by side)

2007-11-15  Jeff Segars  <jeff@webempoweredchurch.org>

	* Feature #6672: Add tab filtering and file type filtering to TCA-defined link wizard

2007-11-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6657 revisited: htmlArea RTE: remove em and strong remap from main script

2007-11-15  Ingo Renner	<ingo@typo3.org>

	* enabled requestUpdate for rte_enabled
	* added feature #6721: add the workspace selector to the cleaner backend toolbar
	* added feature #6442: Hook in browse_links request (for linking to records)
	* added beta glue code for t3editor
	* added t3editor as system extension

2007-11-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6712: htmlArea RTE: make hotkeys configurable in PageTSConfig
	* Feature #6712 continued: htmlArea RTE: adding hotkeys to default configuration settings
	* Bugfix: htmlArea RTE: Correction to InlineDefault plugin causing frame reload.
	* Feature #6712 corected: htmlArea RTE: correction to DefaultInline plugin and enhanced API

2007-11-14  Ingmar Schlecht  <ingmar@typo3.org>

	* Cleanup-up to prior commit #529: "TypoScript help" module
	* Added SVN properties to new files
	* Minor changes to feature #6670: Enable Tabs in Page Properties
	* Feature #6710: Use optgroups in selectorboxes

2007-11-14  Ingo Renner	<ingo@typo3.org>
